base/awx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-en
  namespace: awx
spec:
  headers:
    customRequestHeaders:
      Accept-Language: "en-US,en;q=0.9"
